[gd_scene load_steps=4 format=2]

[ext_resource path="res://Parts/Operator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Infinity/Operator_infinity_select.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]

resource_name = "Pop"
length = 0.4
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.39 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1e-005, 1e-005 ) ]
}

[node name="Operator" instance=ExtResource( 1 )]

modulate = Color( 1, 1, 1, 1 )
scale = Vector2( 0.41, 0.41 )
script = ExtResource( 2 )

[node name="Image_holder" parent="." index="1"]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Pop = SubResource( 1 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="mouse_entered" from="." to="." method="_on_Operator_mouse_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


